# metadata_remover

./: .gitignore  CMakeLists.txt  README.md
cmake/: Bundle.cmake
src/: gui_main.cpp  main.cpp  metadata_core.h
